@@ -4,7 +4,7 @@
 #
 
 %%section version
-:1
+:2
 %%endsection
 
 %%section defaultshape
@@ -28,7 +28,7 @@
 
 %%section multiracial_table
 #Format
-#	:skin/sex/shapenum/nakedshape/facenum/faceframe/alterface/alterframe
+#	:skin/sex/shapenum/nakedshape/facenum/faceframe/alterface/alterframe/copydata
 #skin = 0-based skin number
 #sex = 1 for female, 0 for male
 #shapenum and nakedshape can be either a shape # or a reference to an imported
@@ -37,14 +37,17 @@
 #facenum is the face shape from faces.vga to use
 #faceframe is the frame of the face to use
 #alterface and alterframe indicate the face/frame to use when flag 33 is set
-:0/1/1029/1035/0/0/299/0
-:0/0/1028/1034/0/1/299/1
-:1/1/1027/1033/0/2/299/2
-:1/0/1026/1032/0/3/299/3
-:2/1/1025/1031/0/4/299/4
-:2/0/1024/1030/0/5/299/5
-:3/1/658/658/28/0/28/0
-:3/0/747/747/298/0/298/0
+#copydata is optional, and can be 0 or 1. If 1, Exult will copy the shape data
+#from the default avatar shapes; if 0, Exult will use the data already available
+#for the shape.
+:0/1/1029/1035/0/0/299/0/1
+:0/0/1028/1034/0/1/299/1/1
+:1/1/1027/1033/0/2/299/2/1
+:1/0/1026/1032/0/3/299/3/1
+:2/1/1025/1031/0/4/299/4/1
+:2/0/1024/1030/0/5/299/5/1
+:3/1/658/658/28/0/28/0/0
+:3/0/747/747/298/0/298/0/0
 %%endsection
 
 %%section unselectable_races_table
